add the demo link

--- a/web/app.html
+++ b/web/app.html
@@ -1,8 +1,12 @@
-<h1><a href='https://github.com/bevacqua/dragula'><img src='resources/logo.svg' onerror='this.src="resources/logo.png"'
-                                                       alt='dragula'/></a></h1>
-<h3 class='tagline'><span class='tagline-text'>Drag and drop so simple it hurts
+<h1>
+  <a href='https://github.com/bevacqua/dragula'>
+    <img src='resources/logo.svg' onerror='this.src="resources/logo.png"'
+         alt='dragula'/></a>
+</h1>
+<h3 class='tagline'>
+  <span class='tagline-text'>Drag and drop so simple it hurts
     <br><br>Now also for Angular2 Dart!
-    </span>
+  </span>
 </h3>
 <div class='examples'>
   <div class='parent'>
